05_12_Videos_비디오 리스트를 출력하는 Index 컴포넌트 작성

--- a/ArticleAppBlazorServer/Pages/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Index.razor
@@ -67,8 +67,11 @@ Welcome to your new app.
     </a>&nbsp;&nbsp;
 </div>
 <div>
-    <a href="/Video/FrmDbContextTest">
+    <a href="/Videos/FrmDbContextTest">
         <span class="oi oi-wifi" aria-hidden="true"></span> FrmDbContextTest
+    </a>&nbsp;&nbsp;
+    <a href="/Videos">
+        <span class="oi oi-wifi" aria-hidden="true"></span> Videos
     </a>&nbsp;&nbsp;
 </div>
 <Dialog Title="Parameta Dialog Title">
