--- a/ArticleAppBlazorServer/Pages/Videos/FrmDbContextTest.razor
+++ b/ArticleAppBlazorServer/Pages/Videos/FrmDbContextTest.razor
@@ -1,4 +1,4 @@
-﻿@page "/Video/FrmDbContextTest"
+﻿@page "/Videos/FrmDbContextTest"
 @inject ArticleAppDbContext DbContext
 @inject IVideoRepository repository
 
