--- a/ArticleAppBlazorServer/Pages/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Index.razor
@@ -74,6 +74,12 @@ Welcome to your new app.
         <span class="oi oi-wifi" aria-hidden="true"></span> Videos
     </a>&nbsp;&nbsp;
 </div>
+<div>
+    <a href="/Machines/Index">
+        <span class="oi oi-wifi" aria-hidden="true"></span> Machines
+    </a>&nbsp;&nbsp;
+
+</div>
 <Dialog Title="Parameta Dialog Title">
     <ChildContent>
         <p>Dialog Content</p>
