--- a/ModernBusiness/Pages/_Layout.cshtml
+++ b/ModernBusiness/Pages/_Layout.cshtml
@@ -16,12 +16,16 @@
     <link href="ModernBusiness.styles.css" rel="stylesheet" />
     
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"/>
 
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+
+    <!-- User Defined Components-->
+    <link href="_content/BmsCalendar/bmscalendar.css" rel="stylesheet" type="text/css"/>
+
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
