--- a/ModernBusiness/Pages/Index.razor
+++ b/ModernBusiness/Pages/Index.razor
@@ -225,3 +225,15 @@
         </div>
     </div>
 </section>
+<!-- Example 08_01. 25. Blazor 컴포넌트 만들기 Part 1 of 3: DulCalendar 이름으로 Razor 클래스 라이브러리 프로젝트 생성 및 캘린더 기본 모양 적용하기 -->
+<section class="py-5">
+    <div class="row">
+        <div class="col-md-6">
+            <h3><i class="fa fa-calendar"></i> 달력</h3>
+            <BmsCalendar.Calendar></BmsCalendar.Calendar>
+        </div>
+        <div class="col-md-6">
+            
+        </div>
+    </div>
+</section>
