--- a/BmsCalendar/wwwroot/bmscalendar.css
+++ b/BmsCalendar/wwwroot/bmscalendar.css
@@ -1,26 +1,22 @@
-﻿ul {
+﻿.bmscalendar ul {
     list-style-type: none;
 }
 
-body {
-    font-family: Verdana, sans-serif;
-}
-
 /* Month header */
-.month {
-    padding: 70px 25px;
+.bmscalendar .month {
+    padding: 10px;
     width: 100%;
     background: #1abc9c;
     text-align: center;
 }
 
     /* Month list */
-    .month ul {
+    .bmscalendar .month ul {
         margin: 0;
         padding: 0;
     }
 
-        .month ul li {
+        .bmscalendar .month ul li {
             color: white;
             font-size: 20px;
             text-transform: uppercase;
@@ -28,25 +24,24 @@ body {
         }
 
     /* Previous button inside month header */
-    .month .prev {
+    .bmscalendar .month .prev {
         float: left;
-        padding-top: 10px;
     }
 
     /* Next button */
-    .month .next {
+    .bmscalendar .month .next {
         float: right;
-        padding-top: 10px;
     }
 
 /* Weekdays (Mon-Sun) */
-.weekdays {
+.bmscalendar .weekdays {
+    font-size: x-small;
     margin: 0;
     padding: 10px 0;
     background-color: #ddd;
 }
 
-    .weekdays li {
+    .bmscalendar .weekdays li {
         display: inline-block;
         width: 13.6%;
         color: #666;
@@ -54,13 +49,14 @@ body {
     }
 
 /* Days (1-31) */
-.days {
+.bmscalendar .days {
+    font-size: xx-small;
     padding: 10px 0;
     background: #eee;
     margin: 0;
 }
 
-    .days li {
+    .bmscalendar .days li {
         list-style-type: none;
         display: inline-block;
         width: 13.6%;
@@ -71,7 +67,7 @@ body {
     }
 
         /* Highlight the "current" day */
-        .days li .active {
+        .bmscalendar .days li .active {
             padding: 5px;
             background: #1abc9c;
             color: white !important
