--- a/ModernBusiness/Pages/Index.razor
+++ b/ModernBusiness/Pages/Index.razor
@@ -213,27 +213,30 @@
     <!-- Example Code End -->
 </section>
 <!-- Example 사용된 기술 리스트와 추천 사이트 출력하는 컴포넌트 만들기 -->
-<section class="py-5">
-    <div class="row">
-        <div class="col-md-6">
-            <h3><i class="fa fa-wrench"></i> 현재 사이트에서 사용된 기술 리스트</h3>
-            <ModernBusiness.Components.Home.TechListComponent></ModernBusiness.Components.Home.TechListComponent>
-        </div>
-        <div class="col-md-6">
-            <h3><i class="fa fa-wrench"></i> 현재 사이트와 관련된 추천 사이트</h3>
-            <ModernBusiness.Components.Home.SiteListComponent></ModernBusiness.Components.Home.SiteListComponent>
+<section class="py-1">
+    <div class="container px-5 my-1">
+        <div class="row">
+            <div class="col-md-6">
+                <h3><i class="fa fa-wrench"></i> 현재 사이트에서 사용된 기술 리스트</h3>
+                <ModernBusiness.Components.Home.TechListComponent></ModernBusiness.Components.Home.TechListComponent>
+            </div>
+            <div class="col-md-6">
+                <h3><i class="fa fa-wrench"></i> 현재 사이트와 관련된 추천 사이트</h3>
+                <ModernBusiness.Components.Home.SiteListComponent></ModernBusiness.Components.Home.SiteListComponent>
+            </div>
         </div>
     </div>
 </section>
 <!-- Example 08_01. 25. Blazor 컴포넌트 만들기 Part 1 of 3: DulCalendar 이름으로 Razor 클래스 라이브러리 프로젝트 생성 및 캘린더 기본 모양 적용하기 -->
-<section class="py-5">
-    <div class="row">
-        <div class="col-md-6">
-            <h3><i class="fa fa-calendar"></i> 달력</h3>
-            <BmsCalendar.Calendar></BmsCalendar.Calendar>
-        </div>
-        <div class="col-md-6">
-            
+<section class="py-3">
+    <div class="container px-5 my-1">
+        <div class="row">
+            <div class="col-md-6 ">
+                <h3><i class="fa fa-calendar"></i> Schedule</h3>
+                <BmsCalendar.Calendar></BmsCalendar.Calendar>
+            </div>
+            <div class="col-md-6">
+            </div>
         </div>
     </div>
 </section>
