--- a/ModernBusiness/Pages/Index.razor
+++ b/ModernBusiness/Pages/Index.razor
@@ -233,7 +233,9 @@
         <div class="row">
             <div class="col-md-6 ">
                 <h3><i class="fa fa-calendar"></i> Schedule</h3>
-                <BmsCalendar.Calendar></BmsCalendar.Calendar>
+                <BmsCalendar.Calendar OnSelectedDateChanged="OnSelectedDateChanged"></BmsCalendar.Calendar>
+                <hr/>
+                @SelectDate.ToShortDateString()
             </div>
             <div class="col-md-6">
             </div>
