10_01_참고_CKEditor5_Blazor Server 앱에 CKEditor 5 적용하기

--- a/ArticleAppBlazorServer/Pages/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Index.razor
@@ -80,6 +80,12 @@ Welcome to your new app.
     </a>&nbsp;&nbsp;
 
 </div>
+<div>
+    <a href="/CkEditorComponentTest">
+        <span class="oi oi-text" aria-hidden="true"></span>CkEditorComponentTest
+    </a>&nbsp;&nbsp;
+
+</div>
 <Dialog Title="Parameta Dialog Title">
     <ChildContent>
         <p>Dialog Content</p>
