--- a/ArticleAppBlazorServer/Pages/_Layout.cshtml
+++ b/ArticleAppBlazorServer/Pages/_Layout.cshtml
@@ -10,7 +10,12 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="ArticleAppBlazorServer.styles.css" rel="stylesheet" />    
+    <link href="ArticleAppBlazorServer.styles.css" rel="stylesheet" />
+
+    <link href="/_content/Microsoft.FluentUI.AspNetCore.Components/css/reboot.css" rel="stylesheet" />
+    <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
+
+
     <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
 
     <!-- Some styling -->
