--- a/ArticleAppBlazorServer/Shared/MainLayout.razor
+++ b/ArticleAppBlazorServer/Shared/MainLayout.razor
@@ -18,3 +18,10 @@
         </article>
     </main>
 </div>
+
+
+<FluentToastProvider />
+<FluentDialogProvider />
+<FluentTooltipProvider />
+<FluentMessageBarProvider />
+<FluentMenuProvider />
