--- a/ArticleAppBlazorServer/Pages/Counter.razor
+++ b/ArticleAppBlazorServer/Pages/Counter.razor
@@ -1,5 +1,7 @@
 ﻿@page "/counter"
 
+@using Icons=Microsoft.FluentUI.AspNetCore.Components.Icons
+
 <PageTitle>Counter</PageTitle>
 
 <h1>Counter</h1>
@@ -7,6 +9,13 @@
 <p role="status">Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+
+<FluentCard>
+    <h2>Hello World!</h2>
+    <FluentButton Appearance="@Appearance.Accent"
+                  IconStart="@(new Icons.Regular.Size16.Globe())">Click Me</FluentButton>
+</FluentCard>
+
 
 @code {
     private int currentCount = 0;
