01_06_프로젝트 2개 추가 및 UI 업데이트 계속 진행하기

--- a/Hawaso/Views/Shared/_Layout.cshtml
+++ b/Hawaso/Views/Shared/_Layout.cshtml
@@ -41,22 +41,15 @@
                         <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
                         <li class="nav-item"><a class="nav-link" href="/faq">FAQ</a></li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item"><a class="nav-link" href="/DotNetNote">Board</a></li>
+                        @* <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
                                 <li><a class="dropdown-item" href="/Blogs/BlogHome">Blog Home</a></li>
                                 <li><a class="dropdown-item" href="/Blogs/BlogPost">Blog Post</a></li>
                             </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
-                                <li><a class="dropdown-item" href="/Portfolios/PortfolioWebsite">Portfolio Website</a></li>
-                                <li><a class="dropdown-item" href="/Portfolios/PortfolioTwo">Portfolio Two</a></li>
-                                <li><a class="dropdown-item" href="/Portfolios/PortfolioThree">Portfolio Three</a></li>
-                                <li><a class="dropdown-item" href="/Portfolios/PortfolioFour">Portfolio Four</a></li>
-                            </ul>
-                        </li>
+                        </li> *@
+                        <partial name="_LoginPartial"/>
                     </ul>
                 </div>
             </div>
