26_07_DotNetSale_04_카테고리 관련 모델과 인메모리 리포지토리 클래스 만들고 뷰 페이지에 출력하기

--- a/DotNetNote/Views/Shared/_Layout.cshtml
+++ b/DotNetNote/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="DotNetNote" asp-action="Index">게시판</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="DotNetSale" asp-controller="Home" asp-action="Index">AREA[DotNetSale]</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
