폼 유효성 검사와 모델 바인딩 미리보기 실행 및 소스 다운로드 경로 소개

--- a/DotNetNote/Areas/DotNetSale/Views/DotNetSale/Index.cshtml
+++ b/DotNetNote/Areas/DotNetSale/Views/DotNetSale/Index.cshtml
@@ -4,3 +4,15 @@
 
 <h1>쇼핑몰 메인</h1>
 
+<ul>
+    <li><a href="/DotNetSale/DotNetSale/AddToCart">AddToCart</a></li>
+    <li><a href="/DotNetSale/DotNetSale/CategoryAdd">CategoryAdd</a></li>
+    <li><a href="/DotNetSale/DotNetSale/CategoryList">CategoryList</a></li>
+    <li><a href="/DotNetSale/DotNetSale/ProductAdd">ProductAdd</a></li>
+    <li><a href="/DotNetSale/DotNetSale/ProductPages">ProductPages</a></li>
+    <li><a href="/DotNetSale/DotNetSale/ProductsList">ProductsList</a></li>
+    <li><a href="/DotNetSale/DotNetSale/ReviewList">ReviewList</a></li>
+    <li><a href="/DotNetSale/DotNetSale/SearchForm">상품 검색</a></li>
+    <li><a href="/DotNetSale/DotNetSale/ShoppingCart">장바구니</a></li>
+    <li><a href="/DotNetSale/DotNetSale/ReviewList">상품평 리스트</a></li>
+</ul>
