--- a/DotNetNote/Views/FormValidationDemo/ClientValidation.cshtml
+++ b/DotNetNote/Views/FormValidationDemo/ClientValidation.cshtml
@@ -35,9 +35,8 @@
 }
 
 <script src="~/lib/jquery/dist/jquery.js"></script>
-<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
-<script src=
-"~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
 </body>
 </html>
 
