--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -4,5 +4,14 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    <div class="text-center">
+        <ul class="" >
+            <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
+            <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
+            <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
+            <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
+            <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
+        </ul>
+    </div>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
