29_01_MVC_AdvancedPaging_ASP.NET Core 공통 페이징 컨트롤 만들기

--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="text-center">
         <ul class="" >
             <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
-            <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
+            <li><a href="/PartialViewDemo">/PartialViewDemo</a></li>
             <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
             <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
             <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
