--- a/DotNetNote/Views/Shared/_Layout.cshtml
+++ b/DotNetNote/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/DotNetNote.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" asp-append-version="true" />
+    <link href="~/css/memoengine.pager.css" rel="stylesheet" />
 </head>
 <body>
     <header>
