--- a/DotNetNote/Views/Shared/_Layout.cshtml
+++ b/DotNetNote/Views/Shared/_Layout.cshtml
@@ -62,6 +62,7 @@
         <div class="container">
             &copy; 2025 - DotNetNote - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
+        @await Component.InvokeAsync("Copyright")
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
