--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -15,3 +15,14 @@
     </div>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 border border-2">
+            <h5>뷰 컴포넌트 사용예제</h5>
+            <h5>현재 사이트에서 사용된 기술 리스트</h5>
+
+            @await Component.InvokeAsync("TechList")
+        </div>
+    </div>
+</div>
