--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using DotNetNote.Components
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -24,5 +25,13 @@
 
             @await Component.InvokeAsync("TechList")
         </div>
+        <div class="col-md-4 border border-2">
+            <h5>프로젝트에 Blazor Server 사용 가능</h5>
+            <component type="typeof(PortfolioList)" render-mode="ServerPrerendered" />
+        </div>
     </div>
 </div>
+
+@section Scripts {
+    <script src="/_framework/blazor.server.js"></script>
+}
