MVC 뷰 컴포넌트를 사용하여 Carousel 기능을 메인 페이지에 포함하기

--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -31,7 +31,18 @@
         </div>
     </div>
 </div>
+<div class="container" style="height:700px;">
+    <div class="row">
+        <div class="col-md-10 border border-2">
+            <h5>뷰 컴포넌트 사용예제</h5>
+            @await Component.InvokeAsync("AzCarousel")
+            
+        </div>
+        <div class="col-md-2 border border-2">
 
+        </div>
+    </div>
+</div>
 @section Scripts {
     <script src="/_framework/blazor.server.js"></script>
 }
