37_05_DotNetNote 컨트롤러 클래스 작성 및 주요 서버측과 클라이언트측 라이브러리 포함 그리고 입력과 출력 페이지 작성

--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
             <li><a href="/PartialViewDemo">/PartialViewDemo</a></li>
             <li><a href="/CKEditor">/CKEditorController</a></li>
-            <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
+            <li><a href="/DotnetNote">/DotnetNote</a></li>
             <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
         </ul>
     </div>
