--- a/DotNetNote/Views/Shared/_Layout.cshtml
+++ b/DotNetNote/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
     <script src="~/lib/toastr/toastr.min.js"></script>
     <script src="~/lib/moment/moment.min.js"></script>
     <script>
-        moment.locale('ko');
+        moment.locale('ko'); // 한국어로 날짜 표시
     </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
