37_06_상세, 댓글 입출력, 수정, 삭제, 답변 페이지 완성 및 DotNetNote 게시판 프로젝트(설치형) 강좌 완료

--- a/DotNetNote/Views/DotNetNote/Details.cshtml
+++ b/DotNetNote/Views/DotNetNote/Details.cshtml
@@ -104,7 +104,10 @@
 </table>
 
 <div style="text-align:center;">
-
+    <div>
+        <h4>Test option.Value.SiteAdmin : </h4> 
+        <span>@option.Value.SiteAdmin</span>
+    </div>
     @if (Model?.Category != "Notice" && User.IsInRole("Users")
     && User?.FindFirst("UserId")?.Value == option.Value.SiteAdmin)
     {
