--- a/DotNetNote/Views/DotNetNote/Widgets/_BoardCommentControl.cshtml
+++ b/DotNetNote/Views/DotNetNote/Widgets/_BoardCommentControl.cshtml
@@ -71,7 +71,10 @@
                     <input type="button" name="btnDisabled"
                            value="로그인 필요" disabled class="btn btn-default disabled" />
                 }
-
+                @* Test *@
+                <input type="submit" value="댓글(로그인생략)"
+                       class="form-control btn btn-primary"
+                       style="width:96px;display:inline-block;" />
             </td>
         </tr>
         <tr>
