--- a/DotNetNote/wwwroot/css/site.css
+++ b/DotNetNote/wwwroot/css/site.css
@@ -29,3 +29,8 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+body>.container {
+    max-height: 800px;
+    padding-bottom: 1150px;
+}
