37_24_RecentlyCommentListViewComponent_최근 댓글 리스트 5개 출력하는 뷰 컴포넌트 만들기

--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
             <li><a href="/CKEditor">/CKEditorController</a></li>
             <li><a href="/DotnetNote">/DotnetNote</a></li>
             <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
+            <li><a href="/ViewComponentDemo/RecentlyCommentListDemo">/ViewComponentDemo</a></li>
         </ul>
     </div>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
