--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -15,6 +15,12 @@
             <li><a href="/ViewComponentDemo/RecentlyCommentListDemo">/ViewComponentDemo</a></li>
         </ul>
     </div>
+    <div class="text-center">
+        <ul class="">
+            <li>api</li>
+            <li><a href="/api/NoteService">/api/NoteService</a></li>
+        </ul>
+    </div>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
