37_26_NoteCommentServiceController_최근 댓글 리스트 5개 출력하는 Web API 만들기

--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -19,6 +19,7 @@
         <ul class="">
             <li>api</li>
             <li><a href="/api/NoteService">/api/NoteService</a></li>
+            <li><a href="/api/NoteCommentService">/api/NoteCommentService</a></li>
         </ul>
     </div>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
