--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
             <li><a href="/PartialViewDemo">/PartialViewDemo</a></li>
             <li><a href="/CKEditor">/CKEditorController</a></li>
             <li><a href="/DotnetNote">/DotnetNote</a></li>
+            <li><a href="/Board">/Board</a></li>
             <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
             <li><a href="/ViewComponentDemo/RecentlyCommentListDemo">/ViewComponentDemo</a></li>
         </ul>
