38_02_DotNetNote_MainSummaryListViewComponent_뷰 컴포넌트 생성 및 뷰 페이지에서 호출

--- a/DotNetNote/Views/ViewComponentDemo/RecentlyCommentListDemo.cshtml
+++ b/DotNetNote/Views/ViewComponentDemo/RecentlyCommentListDemo.cshtml
@@ -5,3 +5,9 @@
 <h3>최신 댓글 리스트 (ViewComponent Demo)</h3>
 
 @await Component.InvokeAsync("RecentlyCommentList")
+
+<hr/>
+
+<h3>MainSummaryListViewComponent Demo</h3>
+
+@await Component.InvokeAsync("MainSummaryList")
