--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
             <li><a href="/CKEditor">/CKEditorController</a></li>
             <li><a href="/DotnetNote">/DotnetNote</a></li>
             <li><a href="/Board">/Board</a></li>
+            <li><a href="/Errata">/Errata</a></li>
             <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
             <li><a href="/ViewComponentDemo/RecentlyCommentListDemo">/ViewComponentDemo</a></li>
         </ul>
