40_05_모집 추가 및 리스트 페이지 생성

--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -5,29 +5,32 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <div class="text-center">
-        <ul class="" >
-            <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
-            <li><a href="/PartialViewDemo">/PartialViewDemo</a></li>
-            <li><a href="/CKEditor">/CKEditorController</a></li>
-            <li><a href="/DotnetNote">/DotnetNote</a></li>
-            <li><a href="/Board">/Board</a></li>
-            <li><a href="/Errata">/Errata</a></li>
-            <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
-            <li><a href="/ViewComponentDemo/RecentlyCommentListDemo">/ViewComponentDemo</a></li>
-        </ul>
-    </div>
-    <div class="text-center">
-        <ul class="">
-            <li>api</li>
-            <li><a href="/api/NoteService">/api/NoteService</a></li>
-            <li><a href="/api/NoteCommentService">/api/NoteCommentService</a></li>
-        </ul>
+    <div class="row">
+        <div class="col-md-6 border border-1 text-center">
+            <ul class="" >
+                <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
+                <li><a href="/PartialViewDemo">/PartialViewDemo</a></li>
+                <li><a href="/CKEditor">/CKEditorController</a></li>
+                <li><a href="/DotnetNote">/DotnetNote</a></li>
+                <li><a href="/Board">/Board</a></li>
+                <li><a href="/Errata">/Errata</a></li>
+                <li><a href="/RecruitManager">/RecruitManager</a></li>
+                <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
+                <li><a href="/ViewComponentDemo/RecentlyCommentListDemo">/ViewComponentDemo</a></li>
+            </ul>
+        </div>
+        <div class="col-md-6 border border-1 text-center">
+            <ul class="">
+                <li>api</li>
+                <li><a href="/api/NoteService">/api/NoteService</a></li>
+                <li><a href="/api/NoteCommentService">/api/NoteCommentService</a></li>
+            </ul>
+        </div>
     </div>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
-<div class="container">
+<div class="container mt-1">
     <div class="row">
         <div class="col-md-4 border border-2">
             <h5>뷰 컴포넌트 사용예제</h5>
@@ -45,7 +48,7 @@
         </div>
     </div>
 </div>
-<div class="container" style="height:700px;">
+<div class="container mt-1" style="height:700px;">
     <div class="row">
         <div class="col-md-10 border border-2">
             <h5>뷰 컴포넌트 사용예제</h5>
