02_01_DotNetNote.Apis 프로젝트 생성 및 GitHub에 공개 그리고 Web API 기본 설명

--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -24,6 +24,7 @@
                 <li>api</li>
                 <li><a href="/api/NoteService">/api/NoteService</a></li>
                 <li><a href="/api/NoteCommentService">/api/NoteCommentService</a></li>
+                <li><a href="/WeatherForecast">/WeatherForecast</a></li>
             </ul>
         </div>
     </div>
