--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -24,7 +24,8 @@
                 <li>api</li>
                 <li><a href="/api/NoteService">/api/NoteService</a></li>
                 <li><a href="/api/NoteCommentService">/api/NoteCommentService</a></li>
-                <li><a href="/WeatherForecast">/WeatherForecast</a></li>
+                <li><a href="/api/ApiHelloWorldWithValue">/api/ApiHelloWorldWithValue</a></li>
+                <li><a href="/swagger/index.html">/swaggere</a></li>
             </ul>
         </div>
     </div>
