04_01_MyRankingServiceController_ASP.NET Core Web API 만들고 jQuery로 테스트하기

--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -25,6 +25,7 @@
                 <li><a href="/api/NoteService">/api/NoteService</a></li>
                 <li><a href="/api/NoteCommentService">/api/NoteCommentService</a></li>
                 <li><a href="/api/ApiHelloWorldWithValue">/api/ApiHelloWorldWithValue</a></li>
+                <li><a href="/api/MyRankingService">/api/MyRankingService</a></li>
                 <li><a href="/swagger/index.html">/swaggere</a></li>
             </ul>
         </div>
