--- a/DotNetNote/Views/Home/Index.cshtml
+++ b/DotNetNote/Views/Home/Index.cshtml
@@ -17,6 +17,7 @@
                 <li><a href="/RecruitManager">/RecruitManager</a></li>
                 <li><a href="/formvalidationDemo">/formvalidationDemo</a></li>
                 <li><a href="/ViewComponentDemo/RecentlyCommentListDemo">/ViewComponentDemo</a></li>
+                <li><a href="/PointDemoTest">/PointDemoTest</a></li>
             </ul>
         </div>
         <div class="col-md-6 border border-1 text-center">
@@ -26,6 +27,7 @@
                 <li><a href="/api/NoteCommentService">/api/NoteCommentService</a></li>
                 <li><a href="/api/ApiHelloWorldWithValue">/api/ApiHelloWorldWithValue</a></li>
                 <li><a href="/api/MyRankingService">/api/MyRankingService</a></li>
+                <li><a href="/api/FiveService">/api/FiveService</a></li>
                 <li><a href="/swagger/index.html">/swaggere</a></li>
             </ul>
         </div>
