04_06. Customers 고객 리스트 페이지 구현 완료. Blazor 강의, Blazor 강좌

--- a/Hawaso/Pages/_Layout.cshtml
+++ b/Hawaso/Pages/_Layout.cshtml
@@ -59,6 +59,10 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Counter
                         </a>
+                        <a class="nav-link" href="/Customers">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Customers
+                        </a>
                         <div class="sb-sidenav-menu-heading">Interface</div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
