04 07 Customers 고객 등록 페이지 구현

--- a/Hawaso/Pages/_Layout.cshtml
+++ b/Hawaso/Pages/_Layout.cshtml
@@ -11,6 +11,11 @@
     <!-- Custom fonts for this template-->
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
     <link href="~/templates/dashboard/css/styles.css" rel="stylesheet" />
+    <!--matBlazor-->
+    <!--_content 는 Nuget 패키지 링크를 나타냄-->
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
+    <!--matBlazor-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
