--- a/Hawaso/Pages/Customers/Create.razor
+++ b/Hawaso/Pages/Customers/Create.razor
@@ -1,50 +1,58 @@
-﻿@page "/Customers/create"
-@page "/Customers/Create/{Id:int}"
+﻿@page "/Customers/Create"
+
+@* @attribute [Authorize(Roles = "Administrators")] *@
 
 <h3>Create</h3>
 
 <div class="row">
     <div class="col-md-12">
-        <EditForm Model="model" OnValidSubmit="FormSubmit">
+        <EditForm Model="customer" OnValidSubmit="btnSubmit_Click">
             <DataAnnotationsValidator></DataAnnotationsValidator>
             <ValidationSummary></ValidationSummary>
             <div class="form-group">
                 <label for="txtName">Name</label>
-                <InputText id="txtName" class="form-control" placeholder="Enter Title"
-                           @bind-Value="@model.Name"></InputText>
-                <ValidationMessage For="@(() => model.Name)" class="form-text text-muted"></ValidationMessage>
+                <InputText id="txtName" class="form-control" placeholder="Enter Name"
+                           @bind-Value="@customer.CustomerName"></InputText>
+                <ValidationMessage For="@(() => customer.CustomerName)" class="form-text text-muted"></ValidationMessage>
             </div>
             <div class="form-group">
-                <label for="txtTitle">Title</label>
-                <InputText id="txtTitle" class="form-control" placeholder="Enter Title"
-                           @bind-Value="@model.Title"></InputText>
-                <ValidationMessage For="@(() => model.Title)" class="form-text text-muted"></ValidationMessage>
+                <label for="txtEmail">Email</label>
+                <InputText id="txtEmail" class="form-control" placeholder="Enter Content" rows="5"
+                           @bind-Value="@customer.EmailAddress"></InputText>
+                <ValidationMessage For="@(() => customer.EmailAddress)" class="form-text text-muted"></ValidationMessage>
             </div>
             <div class="form-group">
-                <label for="txtContent">Content</label>
-                <InputTextArea id="txtContext" class="form-control" placeholder="Enter Content" rows="5"
-                               @bind-Value="@model.Content"></InputTextArea>
-                <ValidationMessage For="@(() => model.Content)" class="form-text text-muted"></ValidationMessage>
+                <label for="txtEmail">zipcode</label>
+                <InputText id="txtZipcode" class="form-control" placeholder="Enter Content" rows="5"
+                           @bind-Value="@customer.Zip"></InputText>
+                <ValidationMessage For="@(() => customer.Zip)" class="form-text text-muted"></ValidationMessage>
             </div>
             <div class="form-group">
-                <label for="lstCategory">Parent</label>
-                <InputSelect @bind-Value="@ParentId" class="form-control" id="lstCategory">
-                    <option value="">--Select Parent--</option>
-                    @foreach (var p in parentIds)
+                <label for="txtEmail">Address</label>
+                <InputText id="txtAddress" class="form-control" placeholder="Enter Content" rows="5"
+                           @bind-Value="@customer.Address"></InputText>
+                <ValidationMessage For="@(() => customer.Address)" class="form-text text-muted"></ValidationMessage>
+            </div>
+            <div class="form-group">
+                <label for="txtEmail">Address Detail</label>
+                <InputText id="txtAddressDetail" class="form-control" placeholder="Enter Content" rows="5"
+                           @bind-Value="@customer.AddressDetail"></InputText>
+                <ValidationMessage For="@(() => customer.AddressDetail)" class="form-text text-muted"></ValidationMessage>
+            </div>
+            <div class="form-group">
+                <label for="txtEmail">Gender</label>
+                <InputSelect @bind-Value="@customer.Gender" class="form-control">
+                    <option value="">--Select Gender--</option>
+                    @foreach (var gender in genders)
                     {
-                        <option value="@p">@p</option>
+                        <option value="@gender">@gender</option>
                     }
                 </InputSelect>
-                <ValidationMessage For="@(() => ParentId)" class="form-text text-muted"></ValidationMessage>
+                <ValidationMessage For="@(() => customer.Gender)" class="form-text text-muted"></ValidationMessage>
             </div>
             <div class="form-group">
-                <label for="txtTitle">File</label>
-                <BlazorInputFile.InputFile OnChange="HandleSelection">
-                </BlazorInputFile.InputFile>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary">Submit</button>
-                <a href="/uploads" class="btn btn-secondary">List</a>
+                <button type="submit" class="btn btn-primary">Create</button>
+                <a href="/Customers" class="btn btn-secondary">List</a>
             </div>
         </EditForm>
     </div>
