--- a/Hawaso/Pages/Customers/Details.razor
+++ b/Hawaso/Pages/Customers/Details.razor
@@ -1,46 +1,35 @@
-﻿@page "/Customers/details/{Id:int}"
+﻿@page "/Customers/Details/{CustomerId:int}"
+
+@*@attribute [AllowAnonymous]*@
+@* @attribute [Authorize(Roles = "Administrators")] *@
+
 
 <h3>Details</h3>
-
 
 <div class="row">
     <div class="col-md-12">
         <div class="form-group row">
-            <label for="id" class="col-sm-2 col-form-label">Id: </label>
+            <label for="id" class="col-sm-2 col-form-label">ID: </label>
             <div class="col-sm-10">
-                <input type="text" class="form-control-plaintext" id="id" value="@model.Id" />
+                <input type="text" class="form-control-plaintext" id="id" value="@customer.CustomerId" />
             </div>
         </div>
         <div class="form-group row">
-            <label for="lblName" class="col-sm-2 col-form-label">Name: </label>
+            <label for="lblCustomerName" class="col-sm-2 col-form-label">Name: </label>
             <div class="col-sm-10">
-                <input type="text" class="form-control-plaintext" id="lblName" value="@model.Name" />
+                <input type="text" class="form-control-plaintext" id="lblCustomerName" value="@customer.CustomerName" />
             </div>
         </div>
         <div class="form-group row">
-            <label for="lblTitle" class="col-sm-2 col-form-label">Title: </label>
+            <label for="lblEmail" class="col-sm-2 col-form-label">Email: </label>
             <div class="col-sm-10">
-                <input type="text" class="form-control-plaintext" id="lblTitle" value="@model.Title" />
-            </div>
-        </div>
-        <div class="form-group row">
-            <div class="col-sm-12">
-                @((MarkupString)content)
-            </div>
-        </div>
-        <div class="form-group row">
-            <div class="col-sm-12">
-                @if (model.FileName != null)
-                {
-                    <img src="@(folderPath + "/" + model.FileName)" alt="Image" class="img-fluid" />                    
-                }
+                <input type="text" class="form-control-plaintext" id="lblEmail" value="@customer.EmailAddress" />
             </div>
         </div>
         <div class="form-group">
-            <a href="/Replys/Create/@model.Id" class="btn btn-primary">Reply</a>
-            <a href="/Replys/Edit/@model.Id" class="btn btn-primary">Edit</a>
-            <a href="/Replys/Delete/@model.Id" class="btn btn-danger">Delete</a>
-            <a href="/Replys" class="btn btn-secondary">List</a>
+            <a href="/Customers/Edit/@customer.CustomerId" class="btn btn-primary">Edit</a>
+            <a href="/Customers/Delete/@customer.CustomerId" class="btn btn-danger">Delete</a>
+            <a href="/Customers" class="btn btn-secondary">List</a>
         </div>
     </div>
 </div>
