--- a/Hawaso/Views/Shared/_Layout.cshtml
+++ b/Hawaso/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/Customers">Customers[B]</a></li>
                         <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
                         <li class="nav-item"><a class="nav-link" href="/faq">FAQ</a></li>
                         <li class="nav-item"><a class="nav-link" href="/DotNetNote">Board</a></li>
